force-app/main/default/objects/Survey__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <description>Specific process the survey is tied to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>