force-app/main/default/objects/Survey__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <description>Captures the date the completed survey response was recieved</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>