force-app/main/default/objects/Survey__c/fields/SurveySentDate__c.field-meta.xml
<CustomField>
    <fullName>SurveySentDate__c</fullName>
    <description>Records the date survey was sent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Sent Date</label>
    <type>Date</type>
</CustomField>