force-app/main/default/objects/Survey__c/fields/SurveyURL__c.field-meta.xml
<CustomField>
    <fullName>SurveyURL__c</fullName>
    <description>Survey Link retrieved from Qualtrics</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey URL</label>
    <type>Text</type>
</CustomField>