force-app/main/default/objects/Survey__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Case__c</columns>
    <columns>SurveySentDate__c</columns>
    <columns>ResponseDate__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>